--- a/Business and Persistence Layer/layered/src/main/resources/application.properties
+++ b/Business and Persistence Layer/layered/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url= jdbc:postgresql://peanut.db.elephantsql.com:5432/ftvpswii
+spring.datasource.username= ftvpswii
+spring.datasource.password= 7T6keurgH596SVBPkDrsbGWBU_50iyye
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
